fix integratiion (#26689)